--- a/index.html
+++ b/index.html
@@ -2,348 +2,23 @@
 <html lang="nl">
 <head>
   <meta charset="utf-8" />
+  <title>Agenda Overzicht</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Beschikbaarheid NJ-Lighting</title>
-  <style>
-    :root {
-      --bg: #0b0f15;
-      --panel: #111827;
-      --border: #1f2937;
-      --text: #e5e7eb;
-      --muted: #94a3b8;
-      --busy: #ef4444;
-      --busy-border: #dc2626;
-      --free: #0b0f15;
-      --accent: #1f2937;
-    }
-    html, body { margin:0; padding:0; background:var(--bg); color:var(--text); font-family: system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans"; }
-    #wrap { max-width: 1100px; margin: 24px auto; padding: 0 16px; }
-
-    .toolbar {
-      display:flex; gap:8px; align-items:center; justify-content:space-between;
-      background:var(--panel); border:1px solid var(--border); border-radius:14px; padding:10px 14px; margin-bottom:12px;
-    }
-    .left, .right { display:flex; gap:10px; align-items:center; }
-    .title { font-weight:700; letter-spacing:.2px; font-size:18px; }
-    button, select {
-      background:var(--accent); color:var(--text); border:1px solid var(--border); border-radius:10px;
-      padding:8px 12px; cursor:pointer;
-    }
-    button:hover, select:hover { filter:brightness(1.1); }
-
-    #view { background:var(--panel); border:1px solid var(--border); border-radius:14px; overflow:hidden; }
-
-    /* Weektabel */
-    table { width:100%; border-collapse:collapse; table-layout:fixed; }
-    th, td { border:1px solid var(--border); text-align:center; }
-    th { background:#0c1320; color:var(--text); font-weight:600; padding:10px 6px; }
-    td { padding:8px 4px; height:40px; }
-    .hour-col { width:80px; color:var(--muted); background:#0d1524; position:sticky; left:0; z-index:1; }
-    .busy { background:var(--busy); color:#fff; font-weight:700; border-color:var(--busy-border); }
-    .free { background:var(--free); }
-
-    .legend { display:flex; gap:14px; align-items:center; color:var(--muted); font-size:14px; margin:10px 2px 16px; }
-    .dot { width:14px; height:14px; border-radius:4px; display:inline-block; vertical-align:middle; margin-right:6px; }
-    .dot.busy { background:var(--busy); border:1px solid var(--busy-border); }
-    .dot.free { background:var(--free); border:1px solid var(--border); }
-
-    /* Maandgrid */
-    .month-grid { display:grid; grid-template-columns: repeat(7, 1fr); border-top:1px solid var(--border); border-left:1px solid var(--border); }
-    .daycell {
-      border-right:1px solid var(--border); border-bottom:1px solid var(--border);
-      min-height:120px; position:relative; padding:6px 6px 8px; background:#0f172a;
-    }
-    .daynum { position:absolute; top:6px; right:8px; font-size:12px; color:var(--muted); }
-    .daybusy { background: rgba(239,68,68,.14); outline: 1px solid rgba(239,68,68,.28); }
-    .outside { opacity:.55; }
-
-    .weekday-header { display:grid; grid-template-columns: repeat(7, 1fr); }
-    .weekday-header div { text-align:center; padding:8px 0; background:#0c1320; border-right:1px solid var(--border); border-left:1px solid var(--border); }
-
-    /* Chips met tijden in maandweergave */
-    .timechip {
-      display:inline-block;
-      padding:3px 6px;
-      border-radius:8px;
-      font-size:12px;
-      margin-top:6px;
-      margin-right:6px;
-      background: var(--busy);
-      border:1px solid var(--busy-border);
-      color:#fff;
-      font-weight:700;
-      white-space:nowrap;
-    }
-    .morechip { background:#334155; border:1px solid #475569; }
-
-    .week-scroller { overflow:auto; max-height: 75vh; }
-  </style>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
-  <div id="wrap">
-    <div class="toolbar">
-      <div class="left">
-        <img src="NickJonker_def.png" alt="NJ-Lighting logo" style="height:36px;border-radius:6px;display:block;" />
-        <button id="prevBtn" aria-label="Vorige">&larr;</button>
-        <button id="todayBtn">Vandaag</button>
-        <button id="nextBtn" aria-label="Volgende">&rarr;</button>
-      </div>
-      <div class="title" id="title">Beschikbaarheid NJ-Lighting</div>
-      <div class="right">
-        <label for="viewSelect" style="color:var(--muted)">Weergave:</label>
-        <select id="viewSelect">
-          <option value="week">Week</option>
-          <option value="month">Maand</option>
-        </select>
-        <button id="refreshNowBtn" title="ICS nu updaten">Nu verversen</button>
-      </div>
-    </div>
+<body class="page-overview">
+  <header class="top-header">
+    <h1>Agenda Overzicht</h1>
+    <p class="info">
+      De zichtbare velden per kalender stel je in op de
+      <a href="admin.html">iCal Admin</a>-pagina.
+    </p>
+  </header>
 
-    <div class="legend">
-      <span><span class="dot busy"></span>Bezet</span>
-      <span><span class="dot free"></span>Vrij (geen events)</span>
-    </div>
+  <main>
+    <div id="events-container" class="loading">Agenda’s worden geladen…</div>
+  </main>
 
-    <div id="view"></div>
-  </div>
-
-  <!-- ical.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ical.js/1.4.0/ical.min.js"></script>
-  <script>
-    const ICS_URL_BASE = "./calendar.ics";
-    const LOCALE = "nl-NL";
-    const WEEK_SLOT_START = 0;
-    const WEEK_SLOT_END   = 24;
-
-    function cacheBustedUrl() {
-      const sep = ICS_URL_BASE.includes("?") ? "&" : "?";
-      return `${ICS_URL_BASE}${sep}t=${Date.now()}`;
-    }
-
-    let rawEvents = [];
-    let currentDate = new Date();
-    let currentView = "week";
-
-    const fmtMonthTitle = (d) => d.toLocaleDateString(LOCALE, { month: "long", year: "numeric" });
-    const fmtWeekTitle = (monday) => {
-      const sunday = new Date(monday); sunday.setDate(monday.getDate() + 6);
-      const startStr = monday.toLocaleDateString(LOCALE, { day: "numeric", month: "short" });
-      const endStr   = sunday.toLocaleDateString(LOCALE, { day: "numeric", month: "short", year: "numeric" });
-      return `${startStr} – ${endStr}`;
-    };
-    const startOfMonday = (d) => { const x = new Date(d); const diff = (x.getDay() === 0 ? -6 : 1 - x.getDay()); x.setDate(x.getDate()+diff); x.setHours(0,0,0,0); return x; };
-    const startOfMonth = (d) => { const x = new Date(d); x.setDate(1); x.setHours(0,0,0,0); return x; };
-    const overlaps = (aStart,aEnd,bStart,bEnd) => aStart < bEnd && aEnd > bStart;
-    function fmtHM(d) { return `${String(d.getHours()).padStart(2,"0")}:${String(d.getMinutes()).padStart(2,"0")}`; }
-
-    async function loadICS() {
-      const resp = await fetch(cacheBustedUrl());
-      if (!resp.ok) throw new Error("ICS ophalen mislukt: " + resp.status);
-      const text = await resp.text();
-      const jcalData = ICAL.parse(text);
-      const comp = new ICAL.Component(jcalData);
-      rawEvents = comp.getAllSubcomponents("vevent").map(e => new ICAL.Event(e));
-      console.log(`ICS geladen: ${rawEvents.length} events`);
-    }
-
-    function getOccurrencesInRange(rangeStart, rangeEnd) {
-      const results = [];
-      for (const ev of rawEvents) {
-        let dur = ev.duration;
-        if (!dur) { try { dur = ev.endDate.subtractDate(ev.startDate); } catch (_) {} }
-        const toJs = (t) => t.toJSDate();
-
-        if (ev.isRecurring()) {
-          const exp = new ICAL.RecurExpansion({ component: ev.component, dtstart: ev.startDate });
-          while (!exp.complete) {
-            const next = exp.next(); if (!next) break;
-            const occStart = toJs(next);
-            let occEnd;
-            if (dur) {
-              const st = ICAL.Time.fromJSDate(occStart, next.isDate);
-              const et = st.clone(); et.addDuration(dur); occEnd = et.toJSDate();
-            } else {
-              occEnd = new Date(occStart.getTime() + 86400000);
-            }
-            if (occEnd < rangeStart) continue;
-            if (occStart > rangeEnd) break;
-            results.push({ start: occStart, end: occEnd });
-          }
-        } else {
-          const s = toJs(ev.startDate);
-          let e = ev.endDate ? toJs(ev.endDate) : new Date(s.getTime() + 86400000);
-          if (overlaps(s,e,rangeStart,rangeEnd)) results.push({ start:s, end:e });
-        }
-      }
-      return results;
-    }
-
-    function renderWeek(dateRef) {
-      const viewEl = document.getElementById("view"); viewEl.innerHTML = "";
-      const scroller = document.createElement("div"); scroller.className = "week-scroller";
-
-      const monday = startOfMonday(dateRef);
-      const weekStart = new Date(monday);
-      const weekEnd = new Date(monday); weekEnd.setDate(weekEnd.getDate() + 7);
-      const occ = getOccurrencesInRange(weekStart, weekEnd);
-
-      const table = document.createElement("table");
-      const thead = document.createElement("thead");
-      const thr = document.createElement("tr");
-      const thTime = document.createElement("th"); thTime.textContent = "Tijd"; thTime.className = "hour-col"; thr.appendChild(thTime);
-
-      for (let d = 0; d < 7; d++) {
-        const day = new Date(monday); day.setDate(monday.getDate() + d);
-        const th = document.createElement("th");
-        th.textContent = day.toLocaleDateString(LOCALE, { weekday: "long", day: "numeric", month: "short" });
-        thr.appendChild(th);
-      }
-      thead.appendChild(thr); table.appendChild(thead);
-
-      const tbody = document.createElement("tbody");
-      for (let h = WEEK_SLOT_START; h < WEEK_SLOT_END; h++) {
-        const tr = document.createElement("tr");
-        const tdHour = document.createElement("td"); tdHour.className = "hour-col"; tdHour.textContent = `${String(h).padStart(2,"0")}:00`; tr.appendChild(tdHour);
-
-        for (let d = 0; d < 7; d++) {
-          const cell = document.createElement("td");
-          const slotStart = new Date(monday); slotStart.setDate(monday.getDate() + d); slotStart.setHours(h,0,0,0);
-          const slotEnd = new Date(slotStart); slotEnd.setHours(h + 1);
-          const busy = occ.some(o => overlaps(slotStart, slotEnd, o.start, o.end));
-          cell.className = busy ? "busy" : "free";
-          cell.textContent = busy ? "Bezet" : "";
-          tr.appendChild(cell);
-        }
-        tbody.appendChild(tr);
-      }
-      table.appendChild(tbody); scroller.appendChild(table); viewEl.appendChild(scroller);
-      document.getElementById("title").textContent = `Week ${fmtWeekTitle(monday)}`;
-    }
-
-    function renderMonth(dateRef) {
-      const viewEl = document.getElementById("view");
-      viewEl.innerHTML = "";
-
-      const first = startOfMonth(dateRef);
-      const firstWeekMonday = startOfMonday(first);
-      const gridStart = new Date(firstWeekMonday);
-      const gridEnd = new Date(gridStart); gridEnd.setDate(gridEnd.getDate() + 42);
-      const occ = getOccurrencesInRange(gridStart, gridEnd);
-
-      const wk = document.createElement("div");
-      wk.className = "weekday-header";
-      ["ma","di","wo","do","vr","za","zo"].forEach(w => {
-        const el = document.createElement("div"); el.textContent = w.toUpperCase(); wk.appendChild(el);
-      });
-      viewEl.appendChild(wk);
-
-      const grid = document.createElement("div");
-      grid.className = "month-grid";
-
-      let cursor = new Date(gridStart);
-      const thisMonth = first.getMonth();
-
-      for (let i = 0; i < 42; i++) {
-        const cell = document.createElement("div");
-        cell.className = "daycell";
-        const dayStart = new Date(cursor); dayStart.setHours(0,0,0,0);
-        const dayEnd = new Date(dayStart); dayEnd.setDate(dayEnd.getDate() + 1);
-
-        const dayNum = document.createElement("div");
-        dayNum.className = "daynum";
-        dayNum.textContent = String(dayStart.getDate());
-        cell.appendChild(dayNum);
-
-        const todays = [];
-        for (const o of occ) {
-          if (o.start < dayEnd && o.end > dayStart) {
-            const s = new Date(Math.max(o.start.getTime(), dayStart.getTime()));
-            const e = new Date(Math.min(o.end.getTime(), dayEnd.getTime()));
-            todays.push({ s, e });
-          }
-        }
-        todays.sort((a,b) => a.s - b.s);
-
-        if (todays.length) {
-          cell.classList.add("daybusy");
-          const MAX_CHIPS = 4;
-          const show = todays.slice(0, MAX_CHIPS);
-          for (const t of show) {
-            const isAllDay =
-              t.s.getHours() === 0 && t.s.getMinutes() === 0 &&
-              t.e.getHours() === 0 && t.e.getMinutes() === 0;
-            const label = isAllDay
-              ? "Hele dag"
-              : `${fmtHM(t.s)}–${t.e.getTime() === dayEnd.getTime() ? "24:00" : fmtHM(t.e)}`;
-            const chip = document.createElement("div");
-            chip.className = "timechip";
-            chip.textContent = label;
-            cell.appendChild(chip);
-          }
-          if (todays.length > MAX_CHIPS) {
-            const more = document.createElement("div");
-            more.className = "timechip morechip";
-            more.textContent = `+${todays.length - MAX_CHIPS} meer`;
-            cell.appendChild(more);
-          }
-        }
-        if (cursor.getMonth() !== thisMonth) cell.classList.add("outside");
-        grid.appendChild(cell);
-        cursor.setDate(cursor.getDate() + 1);
-      }
-
-      viewEl.appendChild(grid);
-      document.getElementById("title").textContent = fmtMonthTitle(first);
-    }
-
-    function goPrev(){ if(currentView==="week"){ currentDate.setDate(currentDate.getDate()-7); renderWeek(currentDate);} else { currentDate.setMonth(currentDate.getMonth()-1); renderMonth(currentDate);} }
-    function goNext(){ if(currentView==="week"){ currentDate.setDate(currentDate.getDate()+7); renderWeek(currentDate);} else { currentDate.setMonth(currentDate.getMonth()+1); renderMonth(currentDate);} }
-    function goToday(){ currentDate = new Date(); currentView==="week" ? renderWeek(currentDate) : renderMonth(currentDate); }
-
-    async function init() {
-      try {
-        await loadICS();
-
-        // Listeners
-        document.getElementById("viewSelect").addEventListener("change", e => {
-          currentView = e.target.value;
-          currentView === "week" ? renderWeek(currentDate) : renderMonth(currentDate);
-        });
-        document.getElementById("prevBtn").addEventListener("click", goPrev);
-        document.getElementById("nextBtn").addEventListener("click", goNext);
-        document.getElementById("todayBtn").addEventListener("click", goToday);
-
-        // Start in weekweergave
-        renderWeek(currentDate);
-      } catch (err) {
-        document.getElementById("view").innerHTML = `<div style="padding:16px;">Kon agenda niet laden: ${err.message}</div>`;
-        console.error(err);
-      }
-    }
-
-    // Init direct aanroepen
-    init();
-
-    // Nu verversen knop (CORS-vrij via image ping naar Apps Script Web App)
-    const TRIGGER_URL = "https://script.google.com/macros/s/AKfycbxGPlFE3E0WKR7Z76sL7P6MkzFgEq3gxnNaWPryQYJbMEAgdMuQFQ8obWntFIgaeVSt/exec";
-    document.getElementById("refreshNowBtn").addEventListener("click", () => {
-      const btn = document.getElementById("refreshNowBtn");
-      const orig = btn.textContent;
-      btn.disabled = true;
-      btn.textContent = "Bezig…";
-
-      const img = new Image();
-      img.onload = () => {
-        btn.textContent = "Update gestart ✔";
-        setTimeout(() => location.reload(), 70000);
-      };
-      img.onerror = () => {
-        btn.textContent = "Gestart (controleer straks)…";
-        setTimeout(() => location.reload(), 70000);
-      };
-      img.src = TRIGGER_URL + "?t=" + Date.now();
-    });
-  </script>
+  <script src="js/overview.js"></script>
 </body>
 </html>
-
