--- a/admin.html
+++ b/admin.html
@@ -15,8 +15,8 @@
     </p>
   </header>
 
-  <!-- Nieuwe link toevoegen -->
   <main>
+    <!-- Nieuwe link toevoegen -->
     <section class="card">
       <h2>Nieuwe iCal-link toevoegen</h2>
       <div class="grid-form">
@@ -44,6 +44,7 @@
     </section>
   </main>
 
-  <script src="js/admin.js"></script>
+  <!-- Let op: module -->
+  <script type="module" src="js/admin.js"></script>
 </body>
 </html>
