--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div id="events-container" class="loading">Agenda’s worden geladen…</div>
   </main>
 
-  <script src="js/overview.js"></script>
+  <!-- Let op: module -->
+  <script type="module" src="js/overview.js"></script>
 </body>
 </html>
